--- a/app/public/index.html
+++ b/app/public/index.html
@@ -6,6 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <title>Wunderlist 2.0</title>
+    <link
+      href="https://fonts.googleapis.com/css?family=Alegreya+Sans+SC|Great+Vibes|Jacques+Francois|Lobster+Two|Marck+Script|Rochester|Sacramento&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
